# Agent-Xray

./: .gitignore  AUDIT_FINDINGS.md  CAPABILITIES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  coverage.json  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 02b98f57cce83d89  03de79f63b66d5d1  0f65a0ce2df6aaa4  15b7a48e26f7c642  1ad5076167f9afda  20e51cec901f0fb4  28f91c73547003b6  31803aec6cfb8c9d  3da4715b869dea31  43e6b44a46ca1c5f  542f35ff34fbe3fc  5a15938e39e48ab1  5a492b0ba8d94061  5a59a45ea1605583  61bd77defed91451  63910698c7687df9  647ff3e530f15383  7213a87bf60f251e  7b1f339ddf1533a6  89d0beca53f3474b  94eb8a1bf8c181f9  a336435bb5dd60f9  a541825b7c1a116d  a9bfc3fbfb2a087e  aa9911e15a635cb1  ba524f4fbb3b6c98  bea031fa9d51fa62  c10ae7ab0c147f31  c4e179acc59c7178  c9342e1d55aae874  cf64dcf1d37849cc  d0798f0c54aaac4c  d3e0d1378e56cc58  d4b191af36187a28  dc25dd3e0dca701c  e59bfdf91944d969  e90ad25038d0f4c5
.hypothesis/tmp/: tmpt5woc1w2  tmptveqdx5w
docs/: AGENT_LOOP.md  CONCEPTS.md  MANAGER_LOOP_POC_REPORT.md  V1_ROADMAP.md  architecture.md  custom-rules.md  integration.md  tutorial.md
docs/launch/: blog-post.md  hackernews.md  open_submissions.py  reddit.md
examples/: custom_rules.json  golden_run.json  instrument_anthropic.py  instrument_langchain.py  instrument_mcp.py  instrument_openai.py
examples/adapters/: claude_code.py  generic.py  langchain.py  openai_agents.py
scripts/: validate_release.py
src/agent_xray/: __init__.py  __main__.py  adapter.py  analyzer.py  baseline.py  capture.py  cli.py  comparison.py  completeness.py  dedup.py  diagnose.py  enforce.py  enforce_audit.py  enforce_report.py  flywheel.py  golden.py  grader.py  mcp_server.py  pricing.json  pricing.py  protocols.py  pytest_plugin.py  replay.py  reports.py  root_cause.py  runner.py  schema.py  surface.py  task_bank.py  text_utils.py  watch.py
src/agent_xray/adapters/: __init__.py  anthropic.py  crewai.py  generic.py  langchain.py  openai_chat.py  openai_sdk.py  otel.py
src/agent_xray/contrib/: __init__.py  novviola.py  task_bank.py
src/agent_xray/examples/: __init__.py  demo_20260326.jsonl
src/agent_xray/instrument/: __init__.py  anthropic_sdk.py  base.py  langchain_cb.py  mcp_proxy.py  openai_sdk.py
src/agent_xray/rules/: browser_flow.json  coding_agent.json  default.json  research_agent.json  simple.json
src/agent_xray/signals/: __init__.py  coding.py  commerce.py  memory.py  multi_agent.py  planning.py  research.py
src/agent_xray/tui/: __init__.py  app.py
tests/: conftest.py  test_adapters.py  test_analyzer.py  test_analyzer_branches.py  test_analyzer_coverage.py  test_baseline.py  test_benchmark.py  test_capture.py  test_cli.py  test_cli_dx.py  test_cli_integration.py  test_comparison.py  test_contrib.py  test_contrib_coverage.py  test_decision_surface.py  test_diagnose.py  test_enforce.py  test_enforce_audit.py  test_enforce_audit_coverage.py  test_enforce_gaps.py  test_enforce_integration.py  test_enforce_parse.py  test_enforce_report.py  test_flywheel.py  test_golden.py  test_grader.py  test_grader_branches.py  test_grader_coverage.py  test_grader_edge_cases.py  test_instrument_anthropic.py  test_instrument_base.py  test_instrument_langchain.py  test_instrument_mcp.py  test_instrument_openai.py  test_instrument_record.py  test_integration.py  test_mcp_server.py  test_mcp_server_coverage.py  test_mock_filter.py  test_new_commands.py  (+29 more)
tests/fixtures/: anthropic_trace.jsonl  crewai_trace.jsonl  generic_trace.jsonl  langchain_trace.jsonl  openai_chat_trace.jsonl  openai_trace.jsonl  otel_trace.json
