[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-xray"
version = "0.1.0"
description = "Local-first debugging, grading, and replay tooling for AI agent traces."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "agent-xray contributors" }
]
keywords = [
  "agents",
  "ai",
  "debugging",
  "evaluation",
  "llm",
  "observability",
  "tracing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Testing",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/GeeIHadAGoodTime/Agent-Xray"
Repository = "https://github.com/GeeIHadAGoodTime/Agent-Xray"
Documentation = "https://github.com/GeeIHadAGoodTime/Agent-Xray#readme"
Changelog = "https://github.com/GeeIHadAGoodTime/Agent-Xray/blob/main/CHANGELOG.md"
Issues = "https://github.com/GeeIHadAGoodTime/Agent-Xray/issues"

[project.optional-dependencies]
runner = [
  "httpx>=0.24",
]
otel = [
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
]
tui = [
  "textual>=0.52",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
typecheck = [
  "mypy>=1.10",
]
lint = [
  "ruff>=0.11.0",
]
build = [
  "build>=1.2",
]
all = [
  "build>=1.2",
  "httpx>=0.24",
  "mypy>=1.10",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
  "textual>=0.52",
]
dev = [
  "build>=1.2",
  "httpx>=0.24",
  "mypy>=1.10",
  "opentelemetry-api>=1.30",
  "opentelemetry-sdk>=1.30",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11.0",
  "textual>=0.52",
]

[project.scripts]
agent-xray = "agent_xray.cli:main"

[project.entry-points.pytest11]
agent_xray = "agent_xray.pytest_plugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["agent_xray*"]

[tool.setuptools.package-data]
agent_xray = ["py.typed", "rules/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["agent_xray.adapters.otel", "agent_xray.tui.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_xray"]

[tool.coverage.report]
show_missing = true
skip_covered = false
